ラッパーの呼び出し

--- a/PortAudioCSharp/PortAudioCSharp.csproj
+++ b/PortAudioCSharp/PortAudioCSharp.csproj
@@ -1,6 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\portaudio-for-ffi\dotnet\PortAudio.Unsafe.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
