--- a/PortAudioCSharp/PortAudioCSharp.csproj
+++ b/PortAudioCSharp/PortAudioCSharp.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\portaudio-for-ffi\dotnet\PortAudio.Unsafe.csproj" />
+    <ProjectReference Include="..\portaudio-for-ffi\dotnet\PortAudioCSharp.Unsafe.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
