--- a/PortAudioCSharp/PortAudioCSharp.csproj
+++ b/PortAudioCSharp/PortAudioCSharp.csproj
@@ -7,6 +7,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <ImplicitUsings>enable</ImplicitUsings>
+    <RuntimeIdentifires>win-x64;win-arm64;linux-arm64;linux-x64</RuntimeIdentifires>
   </PropertyGroup>
 
 </Project>
