--- a/portaudio-for-ffi/dotnet/PortAudioCSharp.Unsafe.csproj
+++ b/portaudio-for-ffi/dotnet/PortAudioCSharp.Unsafe.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <RuntimeIdentifires>win-x64;win-arm64;linux-arm64;linux-x64</RuntimeIdentifires>
   </PropertyGroup>
 
 </Project>
